--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           <a href="#">Baixar meu e-book</a>
         </li>
         <li>
-          <a href="https://github.com/maykbrito" target="_blank">Ver meu portifólio</a>
+          <a href="https://github.com/maykbrito" target="_blank">Ver meu portfólio</a>
         </li>
         <li>
           <a href="https://rocketseat.com.br/explorer" target="_blank">Conheça o Explorer</a>
